--- a/poc/package.json
+++ b/poc/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node main.ts"
+        "prettier": "prettier -w src",
+        "start": "ts-node src/main.ts",
+        "test": "mocha -r ts-node/register \"src/**/*.test.ts\""
     },
     "keywords": [],
     "author": "",
@@ -13,7 +15,12 @@
         "@types/node": "^14.14.45",
         "@types/pdfkit": "^0.11.0",
         "pdfkit": "^0.12.1",
+        "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
+    },
+    "devDependencies": {
+        "@types/mocha": "^8.2.2",
+        "mocha": "^8.4.0"
     }
 }
