--- a/poc/package.json
+++ b/poc/package.json
@@ -10,7 +10,7 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "@types/node": "^14.14.45",
         "@types/pdfkit": "^0.11.0",
